* FIXED: Bad singleton Window implementation (ID: 3444121)
* FIXED: Compilation with CLucene 2.3 (ID: 3405531)
* FIXED: Number of articles to high in the library (ID: 3396763)
* FIXED: Kiwix-serve sporadic invisible search box with non-latin contents
* FIXED: Toolbar wrong height on Sugar with XOs (ID: 3471281)
* FIXED: Broken ZIM loading on XO OSes 0.8x (ID: 3471279)
* NEW: New supported user interface languages: Faroese (fo), Croatian (hr),
  Iloko (ilo), Limburgish (li), Basa Banyumasan (map-bms), Pashto (ps), 
  Bachkir (ba), Welsh (cy), Yiddish (yi), Wolof (yo), 
  Chinese (Hong Kong)(zh-hk), Albanese (sq), Assamese (as), Kannada (kn),
  Quechua (qu), Tulu (tcy), Belarusian (be), Interlingue (ie), Nepali (ne),
  Norwegian Nynorsk (nn), Occitan (oc), Romansh (rm), Serbo-Croatian (sh),
  Sinhalese (si), Luxembourgish (lb), Korean (ko), Korean of North Korea (ko-kp)
  Windows (in Linux since beta5): Estonian (et), Bulgarian (bg), Georgian (ka),
  Lithuanian (lt), Slovak (sk), Oriya (or)
* NEW: ALT+D shortcut to focus the searchbar (ID: 3475647)
* NEW: --current option to "add" command in kiwix-manage to set the ZIM file a current
* NEW: --noCheck option to "add" command in kiwix-manage to avoid any ZIM quality check
* NEW: Windows self-extracting installer
* NEW: Ask before downloading XML library files (ID: 3442087)
* NEW: kiwix-serve able to deal directly with library XML files
* NEW: Speed-up begin of downloads by removing file pre-allocation
* NEw: Reduce GNU/Linux Package file by 30% (by removing the symbol table of XPCOM components)
* NEW: Allow compilation against Gecko SDK 9.0 and further (xpidl binary was removed)
* NEW: Add support of HTML5 video/audio nodes
* NEW: audible/mute contextual menuitem for HTML5 videos
* NEW: default content icon in the library (ID: 3488268)
* NEW: if no title metatag in file, compute title from the filename (ID: 3488268)
* NEW: Replacement of "fastjar" by "zip" (better dependence)

Kiwix 0.9 beta5